# pretty_pwd

./: Cargo.toml  LICENSE  README.md
src/: config.rs  environment.rs  fancier.rs  main.rs
src/fancier/: tests.rs
