[package]
name = "pretty_pwd"
version = "1.0.0"
edition = "2021"
description = "Enhance pwd with color!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
colored = "2"
