[package]
name = "pretty_pwd"
version = "1.0.0"
edition = "2021"
description = "Enhance pwd with color!"
license = "MIT"
homepage = "https://github.com/tdecker91/pretty_pwd"
repository = "https://github.com/tdecker91/pretty_pwd"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.147"
colored = "2"
confy = "0.5.1"
home = "0.5.4"

[[bin]]
name = "ppwd"
path = "src/main.rs"
